<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Football Scores</string>
    <string name="library_app">Library</string>
    <string name="bib_app">Built It Bigger</string>
    <string name="reader_app">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Udacity Logo</string>
</resources>
