<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="true"
    android:background="#E0F7FA">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/TextStyle"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/spotify_streamer"
        android:id="@+id/button1"
        android:singleLine="true"
        android:onClick="launchOtherApp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_custom"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:singleLine="true"
        android:onClick="launchOtherApp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:background="@drawable/button_custom"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:singleLine="true"
        android:onClick="launchOtherApp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:background="@drawable/button_custom"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/bib_app"
        android:id="@+id/button4"
        android:singleLine="true"
        android:onClick="launchOtherApp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:background="@drawable/button_custom"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/reader_app"
        android:id="@+id/button5"
        android:singleLine="true"
        android:onClick="launchOtherApp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:background="@drawable/button_custom" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:singleLine="true"
        android:onClick="launchOtherApp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:background="@drawable/button_capstone"
        android:textColor="#fff7fbff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@mipmap/ic_launcher"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo" />

</RelativeLayout>
